operator/pkg/gateway-api/testdata/gateway/httproute-disallowed-kind/input/httproute-disallowed-kind.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tlsroutes-only
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
  - name: tls
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: disallowed-kind
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: tlsroutes-only
    namespace: gateway-conformance-infra
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
